created Date component

--- a/app/pets-ui/app/applicant/enter-details/page.scss
+++ b/app/pets-ui/app/applicant/enter-details/page.scss
@@ -3,3 +3,4 @@
 @import "../../../../../node_modules/govuk-frontend/dist/govuk/components/hint/index";
 @import "../../../../../node_modules/govuk-frontend/dist/govuk/components/input/index";
 @import "../../../../../node_modules/govuk-frontend/dist/govuk/components/label/index";
+@import "../../../../../node_modules/govuk-frontend/dist/govuk/components/date-input/index";
