--- a/app/pets-ui/app/applicant/enter-details/page.scss
+++ b/app/pets-ui/app/applicant/enter-details/page.scss
@@ -4,3 +4,5 @@
 @import "../../../../../node_modules/govuk-frontend/dist/govuk/components/input/index";
 @import "../../../../../node_modules/govuk-frontend/dist/govuk/components/label/index";
 @import "../../../../../node_modules/govuk-frontend/dist/govuk/components/date-input/index";
+@import "../../../../../node_modules/govuk-frontend/dist/govuk/components/fieldset/index";
+@import "../../../../../node_modules/govuk-frontend/dist/govuk/components/radios/index";
