Add textarea fields to medical screening form

--- a/pets-ui/src/pages/medical-screening.scss
+++ b/pets-ui/src/pages/medical-screening.scss
@@ -11,5 +11,6 @@
 @import "../../node_modules/govuk-frontend/dist/govuk/components/label/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/radios/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/summary-list/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/textarea/index";
 
 @import "../../node_modules/govuk-frontend/dist/govuk/utilities/index"
