--- a/pets-ui/src/pages/medical-screening.scss
+++ b/pets-ui/src/pages/medical-screening.scss
@@ -1,6 +1,7 @@
 @import "../globals.scss";
 
 @import "../../node_modules/govuk-frontend/dist/govuk/components/button/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/checkboxes/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/error-message/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/error-summary/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/fieldset/index";
