--- a/pets-ui/src/pages/chest-xray-upload.scss
+++ b/pets-ui/src/pages/chest-xray-upload.scss
@@ -1,5 +1,6 @@
 @import "../globals.scss";
  
+@import "../../node_modules/govuk-frontend/dist/govuk/components/breadcrumbs/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/button/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/error-message/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/error-summary/index";
