--- a/pets-ui/src/pages/medical-screening-summary.scss
+++ b/pets-ui/src/pages/medical-screening-summary.scss
@@ -1,5 +1,6 @@
 @import "../globals.scss";
 
+@import "../../node_modules/govuk-frontend/dist/govuk/components/breadcrumbs/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/button/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/fieldset/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/footer/index";
