added missing css

--- a/pets-ui/src/pages/chest-xray-question.scss
+++ b/pets-ui/src/pages/chest-xray-question.scss
@@ -2,5 +2,8 @@
 
 @import "../../node_modules/govuk-frontend/dist/govuk/components/breadcrumbs/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/button/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/error-message/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/error-summary/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/footer/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/header/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/radios/index";
