--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -1,9 +1,9 @@
 body {
-    padding: 0;
-    margin: 0;
-    font-family: 'Inter UI', Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  margin: 0;
+  font-family: "Inter UI", Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @import "../node_modules/govuk-frontend/dist/govuk/base";
