--- a/pets-ui/src/pages/applicant-search.scss
+++ b/pets-ui/src/pages/applicant-search.scss
@@ -8,5 +8,7 @@
 @import "../../node_modules/govuk-frontend/dist/govuk/components/input/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/label/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/select/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/error-message/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/error-summary/index";
 
 @import "../../node_modules/govuk-frontend/dist/govuk/utilities/index"
