reworked skipLink within container, added css and testing

--- a/pets-ui/src/pages/chest-xray-question.scss
+++ b/pets-ui/src/pages/chest-xray-question.scss
@@ -7,3 +7,4 @@
 @import "../../node_modules/govuk-frontend/dist/govuk/components/footer/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/header/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/radios/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/skip-link/index";
