--- a/pets-ui/src/pages/contact-details.scss
+++ b/pets-ui/src/pages/contact-details.scss
@@ -12,5 +12,6 @@
 @import "../../node_modules/govuk-frontend/dist/govuk/components/label/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/radios/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/select/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/skip-link/index";
 
 @import "../../node_modules/govuk-frontend/dist/govuk/utilities/index"
