--- a/pets-ui/src/pages/progress-tracker.scss
+++ b/pets-ui/src/pages/progress-tracker.scss
@@ -9,5 +9,6 @@
 @import "../../node_modules/govuk-frontend/dist/govuk/components/hint/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/label/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/task-list/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/skip-link/index";
 
 @import "../../node_modules/govuk-frontend/dist/govuk/utilities/index"
