--- a/pets-ui/src/pages/chest-xray-upload.scss
+++ b/pets-ui/src/pages/chest-xray-upload.scss
@@ -11,5 +11,6 @@
 @import "../../node_modules/govuk-frontend/dist/govuk/components/hint/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/label/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/summary-list/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/skip-link/index";
  
 @import "../../node_modules/govuk-frontend/dist/govuk/utilities/index"
