--- a/pets-ui/src/pages/error-page.scss
+++ b/pets-ui/src/pages/error-page.scss
@@ -2,5 +2,6 @@
 
 @import "../../node_modules/govuk-frontend/dist/govuk/components/footer/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/header/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/skip-link/index";
 
 @import "../../node_modules/govuk-frontend/dist/govuk/utilities/index"
