--- a/pets-ui/src/pages/medical-screening.scss
+++ b/pets-ui/src/pages/medical-screening.scss
@@ -13,5 +13,6 @@
 @import "../../node_modules/govuk-frontend/dist/govuk/components/radios/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/summary-list/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/textarea/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/skip-link/index";
 
 @import "../../node_modules/govuk-frontend/dist/govuk/utilities/index"
