--- a/pets-ui/src/pages/tb-confirmation.scss
+++ b/pets-ui/src/pages/tb-confirmation.scss
@@ -1,3 +1,4 @@
 @import "../globals.scss";
 
 @import "../../node_modules/govuk-frontend/dist/govuk/utilities/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/skip-link/index";
