--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -9,3 +9,12 @@ body {
 @import "../node_modules/govuk-frontend/dist/govuk/base";
 @import "../node_modules/govuk-frontend/dist/govuk/core/index";
 @import "../node_modules/govuk-frontend/dist/govuk/objects/index";
+
+input[type='file'].hide-text {
+  @extend .govuk-file-upload !optional;
+  font-size: 0;
+
+  &::file-selector-button {
+    font-size: 19px;
+  }
+}
