Feature/tbbeta 658 - "Skip to main content" link (#388)
* created initial skipLink component

* reworked skipLink within container, added css and testing

* fixed linting

* added tabindex to main and expanded testing

* fixed linting

* added css to remove outline for tabindex -1

* Remove braces in skipLink, update href to main-content

* Fix test

* Direct focus to page start on load so that keyboard users can always access skip link

---------

Co-authored-by: Lewis Botcherby <lewis.botcherby@accenture.com>
Co-authored-by: Will <100358610+WJTipper@users.noreply.github.com>
Co-authored-by: Will Tipper <will.tipper@hotmail.co.uk>

--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -10,6 +10,10 @@ body {
 @import "../node_modules/govuk-frontend/dist/govuk/core/index";
 @import "../node_modules/govuk-frontend/dist/govuk/objects/index";
 
+[tabindex="-1"] {
+  outline: none;
+}
+
 input[type='file'].hide-text {
   @extend .govuk-file-upload !optional;
   font-size: 0;
