--- a/pets-ui/src/pages/chest-xray-findings.scss
+++ b/pets-ui/src/pages/chest-xray-findings.scss
@@ -8,6 +8,7 @@
 @import "../../node_modules/govuk-frontend/dist/govuk/components/label/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/notification-banner/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/textarea/index";
+@import "../../node_modules/govuk-frontend/dist/govuk/components/skip-link/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/error-message/index";
 @import "../../node_modules/govuk-frontend/dist/govuk/components/error-summary/index";
 
