Replace base, core & objects imports in component scss with globals

--- a/pets-ui/src/components/notificationBanner/notificationBanner.scss
+++ b/pets-ui/src/components/notificationBanner/notificationBanner.scss
@@ -1,4 +1,2 @@
-@import "../node_modules/govuk-frontend/dist/govuk/base";
-@import "../node_modules/govuk-frontend/dist/govuk/core/index";
-@import "../node_modules/govuk-frontend/dist/govuk/objects/index";
+@import "../../globals.scss";
 @import "../../../node_modules/govuk-frontend/dist/govuk/components/notification-banner/index";
