--- a/pets-ui/src/components/confirmation/confirmation.scss
+++ b/pets-ui/src/components/confirmation/confirmation.scss
@@ -1,5 +1,3 @@
-@import "../node_modules/govuk-frontend/dist/govuk/base";
-@import "../node_modules/govuk-frontend/dist/govuk/core/index";
-@import "../node_modules/govuk-frontend/dist/govuk/objects/index";
+@import "../../globals.scss";
 @import "../../../node_modules/govuk-frontend/dist/govuk/components/panel/index";
 @import "../../../node_modules/govuk-frontend/dist/govuk/components/fieldset/index";
