--- a/pets-ui/src/components/dateTextInput/dateTextInput.scss
+++ b/pets-ui/src/components/dateTextInput/dateTextInput.scss
@@ -1,6 +1,4 @@
-@import "../node_modules/govuk-frontend/dist/govuk/base";
-@import "../node_modules/govuk-frontend/dist/govuk/core/index";
-@import "../node_modules/govuk-frontend/dist/govuk/objects/index";
+@import "../../globals.scss";
 @import "../../../node_modules/govuk-frontend/dist/govuk/components/date-input/index";
 @import "../../../node_modules/govuk-frontend/dist/govuk/components/error-message/index";
 @import "../../../node_modules/govuk-frontend/dist/govuk/components/fieldset/index";
