--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -25,11 +25,9 @@ input[type='file'].hide-text {
   margin-bottom: 20px;
 }
 
-
 .progress-tracker-header-content {
   flex-grow: 1;
 }
-
 
 .progress-tracker-photo-container {
   margin-left: 20px;
@@ -37,7 +35,6 @@ input[type='file'].hide-text {
   display: flex;
   align-items: stretch;
 }
-
 
 .progress-tracker-photo {
   display: block;
@@ -47,18 +44,19 @@ input[type='file'].hide-text {
   object-fit: cover;
 }
 
-
 .progress-tracker-start-search {
   margin-top: 60px;
 }
-
 
 .progress-tracker-certificate-not-issued {
   max-width: none;
   white-space: nowrap;
 }
 
-
 .task-description-static {
   margin-bottom: 0;
+}
+
+.file-upload-existing-file {
+  margin: 0;
 }
