--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -57,6 +57,48 @@ input[type='file'].hide-text {
   margin-bottom: 0;
 }
 
+.applicant-photo-summary {
+  width: 100%;
+  height: auto;
+}
+
+.certificate-reference-nowrap {
+  .govuk-summary-list__row:first-child .govuk-summary-list__value {
+    white-space: nowrap;
+  }
+}
+
 .file-upload-existing-file {
   margin: 0;
+}
+
+.confirmation-panel {
+  margin-bottom: 40px;
+}
+
+
+.confirmation-panel--warning {
+  background-color: #d4351c;
+  border: 5px solid #d4351c;
+}
+
+
+.confirmation-panel__title {
+  color: white;
+}
+
+
+.confirmation-panel__body {
+  color: white;
+  font-size: 36px;
+}
+
+
+.confirmation-panel__reference-number {
+  font-size: 36px;
+}
+
+
+.confirmation-action-button {
+  margin-bottom: 20px;
 }
