--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -109,6 +109,7 @@ input[type='file'].hide-text {
   cursor: pointer;
   text-decoration: none;
   font-size: 1.25rem;
+  width: fit-content;
 } 
 
 .certificate-image{
