TBBETA-1137 Certificate print page (#491)
* Certificate print page

* Remove  footer link meant for TBBETA-155

* Update the pnpm-lock file

* Updating the Certificate

* Remove cat placeholders no longer needed

* Implementing requested changes and fixing testing

* Update pnpm-lock

* Fix this test as I added the clinic used that my account was assigned to

* fix ci issues

* update pnpm lock file

* Add new clinic for testing

* TBBETA-1112: fix the aws sdk to v3 (#515)

* Remove download button

* Fix test

* Fix SonarQube issues

* Attempt at fixing pnpm-lock

* Fix print button behaviour

* Restore pdf preview styles

* Fix missing comma

* Change coverage on SonarQube

* fix for review comments

---------

Co-authored-by: jasnave-ukhsa <jasnave.pinto@ukhsa.gov.uk>

--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -102,3 +102,17 @@ input[type='file'].hide-text {
 .confirmation-action-button {
   margin-bottom: 20px;
 }
+
+.print-trigger {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 1.25rem;
+  width: fit-content;
+} 
+
+.certificate-image{
+    padding-left: 4px;
+    padding-right: 4px;
+}
