Fixing the bugs of the big PR

--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -162,3 +162,7 @@ input[type='file'].hide-text {
 .govuk-radios__conditional--error {
   border-left: 4px solid #d4351c;
 }
+
+.dicom-upload-container {
+  margin-bottom: -20px;
+}
