Reimplement navigation and Post issuance amend

--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -103,6 +103,10 @@ input[type='file'].hide-text {
   margin-bottom: 20px;
 }
 
+.confirmation-secondary-button {
+  margin-top: -50px;
+}
+
 .print-trigger {
   display: flex;
   align-items: center;
