--- a/pets-ui/src/globals.scss
+++ b/pets-ui/src/globals.scss
@@ -174,3 +174,14 @@ input[type='file'].hide-text {
     margin-top: 0;
   }
 }
+
+.govuk-back-link {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 0;
+  margin-bottom: 0px;
+}
+
+.govuk-main-wrapper .govuk-button:not(.govuk-button-group .govuk-button) {
+  margin-bottom: 20px;
+}
