--- a/pets-ui/src/components/spinner/spinner.scss
+++ b/pets-ui/src/components/spinner/spinner.scss
@@ -1,3 +1,10 @@
+#spinner-text {
+  padding: 20px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  text-align: center;
+}
+
 #spinner {
   animation: spin 2s linear infinite;
   border: 16px solid #d1d3d4;
@@ -8,6 +15,15 @@
   margin: auto;
   width: 120px;
   vertical-align: middle;
+}
+
+#spinner-box {
+  align-content: center;
+  background-color: rgb(255, 255, 255);
+  border: 4px solid black;
+  display: inline-block;
+  padding: 30px;
+  z-index: 1002;
 }
 
 #spinner-overlay {
